fixed overflow

--- a/css/skeeks.css
+++ b/css/skeeks.css
@@ -14,6 +14,7 @@ html, body {
     height: 100vh;
     padding: 0;
     margin: 0;
+	overflow-x: hidden;
 }
 
 .name {
